[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/systems/StockMarket.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/DraggableWindow.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/grid.png" type="Texture" id=3]
[ext_resource path="res://assets/window_inset.png" type="Texture" id=4]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0

[node name="StockMarket" type="Node2D"]
script = ExtResource( 1 )

[node name="DraggableWindow" parent="." instance=ExtResource( 2 )]

[node name="NinePatchRect" parent="DraggableWindow/MarginContainer" index="0"]
margin_right = 520.0
margin_bottom = 330.0

[node name="MarginContainer" parent="DraggableWindow/MarginContainer" index="1"]
margin_right = 520.0
margin_bottom = 330.0

[node name="VBoxContainer" parent="DraggableWindow/MarginContainer/MarginContainer" index="0"]
margin_right = 516.0
margin_bottom = 322.0

[node name="PanelContainer" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer" index="0"]
margin_right = 512.0

[node name="MarginContainer" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/PanelContainer" index="0"]
margin_right = 512.0

[node name="Label" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer" index="0"]
margin_right = 508.0
text = "Stock Market"

[node name="MarginContainer" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer" index="1"]
margin_right = 21.0

[node name="HBoxContainer" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/MarginContainer" index="0"]
margin_right = 21.0

[node name="Button" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/MarginContainer/HBoxContainer" index="0"]
margin_right = 13.0

[node name="CenterContainer" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer" index="1"]
margin_right = 512.0
margin_bottom = 318.0

[node name="VBoxContainer" type="VBoxContainer" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer" index="0"]
margin_right = 512.0
margin_bottom = 283.0

[node name="MarginContainer" type="MarginContainer" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 23.0
custom_constants/margin_right = 8
custom_constants/margin_left = 8

[node name="HBoxContainer" type="HBoxContainer" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/MarginContainer"]
margin_left = 8.0
margin_right = 504.0
margin_bottom = 23.0

[node name="CurrentPriceLabel" type="Label" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_top = 2.0
margin_bottom = 21.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 4.0
margin_right = 496.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_constants/separation = 8
alignment = 2

[node name="10BuyButton" type="Button" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer/HBoxContainer"]
margin_left = 290.0
margin_right = 321.0
margin_bottom = 23.0
text = "+10"

[node name="BuyButton" type="Button" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer/HBoxContainer"]
margin_left = 329.0
margin_right = 351.0
margin_bottom = 23.0
text = "+1"

[node name="CurrentOwnedLabel" type="Label" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer/HBoxContainer"]
margin_left = 359.0
margin_top = 2.0
margin_right = 423.0
margin_bottom = 21.0
rect_min_size = Vector2( 64, 0 )
text = "HELLO"
align = 1

[node name="SellButton" type="Button" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer/HBoxContainer"]
margin_left = 431.0
margin_right = 453.0
margin_bottom = 23.0
text = "-1"

[node name="SellAllButton" type="Button" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer/HBoxContainer"]
margin_left = 461.0
margin_right = 492.0
margin_bottom = 23.0
text = "-10"

[node name="Control" type="Control" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 512.0
margin_bottom = 283.0
rect_min_size = Vector2( 512, 256 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/Control/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 510.0
margin_bottom = 254.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/Control"]
width = 3.0

[connection signal="pressed" from="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer/HBoxContainer/10BuyButton" to="." method="_on_10BuyButton_pressed"]
[connection signal="pressed" from="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer/HBoxContainer/BuyButton" to="." method="_on_BuyButton_pressed"]
[connection signal="pressed" from="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer/HBoxContainer/SellButton" to="." method="_on_SellButton_pressed"]
[connection signal="pressed" from="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer/HBoxContainer/SellAllButton" to="." method="_on_SellAllButton_pressed"]

[editable path="DraggableWindow"]
